Updates from ShareLaTeX

--- a/01_introduction.tex
+++ b/01_introduction.tex
@@ -1,3 +1,3 @@
 \chapter{Introduction}
-Noe historie er beskrevet i \cite{SurveyAD}.
+According to \emph{\citep{SurveyAD}} the first ideas of the concept Automatic Differentiation dates back to the 1950 \emph{\citep{beda1959programs}}. More specifically forward Automatic Differentiation was discovered by Wengert in 1964 \emph{\citep{wengert1964simple}}. After the discovery of Wengert, AD was not used actively until the 1980's when modern computers and computer languages gave the theory new feet to stand on. Greiwank did some review of the theory in 1989 \emph{\citep{griewank1989automatic}}.
 \listoftodos
