--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -116,3 +116,32 @@ eprint = {
 }
 
 }
+
+@article{beda1959programs,
+  title={Programs for automatic differentiation for the machine BESM},
+  author={Beda, LM and Korolev, LN and Sukkikh, NV and Frolova, TS},
+  journal={Inst. Precise Mechanics and Computation Techniques, Academy of Science, Moscow},
+  year={1959}
+}
+
+@article{wengert1964simple,
+  title={A simple automatic derivative evaluation program},
+  author={Wengert, Robert Edwin},
+  journal={Communications of the ACM},
+  volume={7},
+  number={8},
+  pages={463--464},
+  year={1964},
+  publisher={ACM}
+}
+
+@article{griewank1989automatic,
+  title={On automatic differentiation},
+  author={Griewank, Andreas and others},
+  journal={Mathematical Programming: recent developments and applications},
+  volume={6},
+  number={6},
+  pages={83--107},
+  year={1989},
+  publisher={Amsterdam}
+}
